# RtmpPushDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rtmppushdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/codec/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  safe_queue.h
app/src/main/cpp/include/: x264.h
app/src/main/cpp/librtmp/: CMakeLists.txt  bytes.h
app/src/main/java/com/example/rtmppushdemo/: AudioChannel.kt  AutoFitTextureView.java  CameraHelper.kt  LivePusher.kt  MainActivity.kt  OnChangeListener.kt  RtmpPush.java  VideoChannel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/rtmppushdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
